--- a/javascript-ES6.html
+++ b/javascript-ES6.html
@@ -90,16 +90,16 @@ paraula(...'bon dia');
 
 //EXERCICI 5
 
-async function b() {
-   // ...
+
+
+
+function b() {
+   //...
 }
-funtion a() {
+async function a() {
 
-    await b()  => 
-
-   {
-   doMoreWork();
-   }
+   await b(); 
+   doMoreWork();   
 }
 
 
